--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -148,3 +148,26 @@ body {
     text-align: center;
     padding: 15px 0;
 }
+
+// Bicycles
+
+.bicycles {
+    max-width: 1200px;
+    margin: 15px auto;
+}
+
+.priceBlock {
+    max-width: 600px;
+}
+
+.bicycles_title {
+    color: #323941;
+    font-size: 80px;
+    font-weight: 700;
+    line-height: 85px;
+}
+
+.warrantyBlock {
+    border: 2px solid #999999;
+    padding: 25px;
+}
