--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -154,6 +154,8 @@ body {
 .bicycles {
     max-width: 1200px;
     margin: 15px auto;
+    display: flex;
+    align-items: center;
 }
 
 .priceBlock {
@@ -165,9 +167,102 @@ body {
     font-size: 80px;
     font-weight: 700;
     line-height: 85px;
+    margin-top: 55px;
+    margin: 55px 0 10px;
+}
+
+.warranty_buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 8px;
 }
 
 .warrantyBlock {
     border: 2px solid #999999;
     padding: 25px;
+    display: grid;
+}
+
+.warranty_button {
+    width: 160px;
+    height: 40px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #999999;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.warranty_button:first-child {
+    margin: 0 5px 0 0;
+}
+
+.price {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.throughBlock {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 30px 0 0;
+}
+
+.through_price {
+    color: #323941;
+    font-size: 16px;
+    text-decoration: line-through;
+}
+
+.new_price {
+    color: #323941;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.text_blue {
+    color: #009EFF;
+    font-weight: 600;
+    font-size: 18px;
+    width: 200px;
+    margin-right: 30px;
+}
+
+.buttonBlock {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.button_price {
+    width: 240px;
+    height: 48px;
+    background-color: #009EFF;
+    color: white;
+    border: 0;
+}
+
+.button_price:first-child {
+    margin-right: 20px;
+}
+
+.methods {
+    margin-top: 10px;
+}
+
+.methods_text {
+    font-size: 16px;
+}
+
+.payment {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5px;
 }
