--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -568,7 +568,7 @@ body {
     margin-right: 15%;
 }
 
-.battery_title {
+.DualBraking_title {
     color: #323941;
     font-weight: 700;
     font-size: 50px;
@@ -576,7 +576,7 @@ body {
     line-height: 45px;
 }
 
-.battery_text {
+.DualBraking_text {
     color: #323941;
     font-weight: 400;
     font-size: 18px;
