--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -582,3 +582,30 @@ body {
     font-size: 18px;
     margin-bottom: 15px;
 }
+
+// FoldingMechanism 
+
+.FoldingMechanism {
+    max-width: 1075px;
+    margin: 15px auto;
+}
+
+.FoldingMechanism_title {
+    color: #000000;
+    font-weight: 700;
+    font-size: 50px;
+    text-align: center;
+    margin: 75px 0 15px;
+}
+
+.FoldingMechanism_text {
+    color: #000;
+    font-size: 14px;
+    text-align: center;
+}
+
+.FoldingMechanism_img {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 75px;
+}
