--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -369,6 +369,9 @@ body {
 
 .packingList_imgPc {
     z-index: 2;
+    filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.25));
+    border-radius: 31px;
+    transform: rotate(5.49deg);
 }
 
 .circle {
