--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -612,3 +612,73 @@ body {
     margin: 0 auto;
     margin-bottom: 75px;
 }
+
+// Downloadmanual
+
+.downloadmanual {
+    max-width: 960px;
+    max-height: 300px;
+    margin: 45px auto;
+    border: 4px solid #009EFF;
+}
+
+.downloadmanual_block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.downloadmanual_img {
+    margin-top: -35px;
+}
+
+.downloadmanual_textBlock {
+    margin-left: 40px;
+}
+
+.downloadmanual_title {
+    color: #323941;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 50px;
+    max-width: 250px;
+    margin-bottom: 15px;
+}
+
+.downloadmanual_iconsBlocks {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.downloadmanual_iconBlock {
+    display: flex;
+    align-items: center;
+}
+
+.downloadmanual_icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.downloadmanual_icon_text {
+    color: #323941;
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.downloadmanual_button {
+    background-color: #009EFF;
+    color: white;
+    width: 240px;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 0;
+}
+
+.downloadmanual_iconButton {
+    width: 30px;
+    height: 30px;
+}
