--- a/practice/src/scss/HomePage.module.scss
+++ b/practice/src/scss/HomePage.module.scss
@@ -682,3 +682,55 @@ body {
     width: 30px;
     height: 30px;
 }
+
+// Smartphone
+
+.smartphone {
+    max-width: 1075px;
+    margin: 35px auto;
+}
+
+.smartphone_title {
+    color: #323941;
+    font-weight: 700;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.smartphone_text {
+    color: #323941;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+}
+
+.smartphone_imgBlock {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+// Foter
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #323941;
+    min-height: 48px;
+    padding: 15px 0;
+}
+
+.footer_textBlock {
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 13px;
+}
+
+.footer_text {
+    margin: 0 20px;
+}
