--- a/practice/src/scss/PC.module.scss
+++ b/practice/src/scss/PC.module.scss
@@ -1158,4 +1158,6 @@ body {
 @media (max-width: 650px) {
     .header {display: none;}
     .logoBlock {display: none;}
+    .products {display: none;}
+    .freeDay {display: none;}
 }
