--- a/practice/src/scss/PC.module.scss
+++ b/practice/src/scss/PC.module.scss
@@ -1160,4 +1160,8 @@ body {
     .logoBlock {display: none;}
     .products {display: none;}
     .freeDay {display: none;}
+    .product {
+        height: 100px;
+        margin: 5px 25px;
+    }
 }
