--- a/practice/src/scss/PC.module.scss
+++ b/practice/src/scss/PC.module.scss
@@ -1164,4 +1164,7 @@ body {
         height: 100px;
         margin: 5px 25px;
     }
+    .bicycles {display: none;}
+    .priceBlock {display: none;}
+    .slider {display: none;}
 }
