--- a/practice/src/scss/PC.module.scss
+++ b/practice/src/scss/PC.module.scss
@@ -1008,30 +1008,30 @@ body {
     }
 }
 
-// Downloadmanual
+// manual
 
-.downloadmanual {
+.manual {
     max-width: 960px;
     max-height: 300px;
     margin: 45px auto;
     border: 4px solid #009EFF;
 }
 
-.downloadmanual_block {
+.manual_block {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.downloadmanual_img {
+.manual_img {
     margin-top: -35px;
 }
 
-.downloadmanual_textBlock {
+.manual_textBlock {
     margin-left: 40px;
 }
 
-.downloadmanual_title {
+.manual_title {
     color: #323941;
     font-weight: 700;
     font-size: 50px;
@@ -1040,30 +1040,30 @@ body {
     margin-bottom: 15px;
 }
 
-.downloadmanual_iconsBlocks {
+.manual_iconsBlocks {
     display: flex;
     margin-bottom: 15px;
 }
 
-.downloadmanual_iconBlock {
+.manual_iconBlock {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
 }
 
-.downloadmanual_icon {
+.manual_icon {
     width: 50px;
     height: 50px;
     margin-right: 10px;
 }
 
-.downloadmanual_icon_text {
+.manual_icon_text {
     color: #323941;
     font-weight: 400;
     font-size: 13px;
 }
 
-.downloadmanual_button {
+.manual_button {
     background-color: #009EFF;
     color: white;
     width: 240px;
@@ -1075,27 +1075,27 @@ body {
     margin-bottom: 15px;
 }
 
-.downloadmanual_iconButton {
+.manual_iconButton {
     width: 30px;
     height: 30px;
 }
 
 @media (max-width: 980px) {
-    .downloadmanual {
+    .manual {
         margin: 45px 20px;
     }
 
-    .downloadmanual_img {
+    .manual_img {
         width: 240px;
     }
 
-    .downloadmanual_title {
+    .manual_title {
         font-size: 26px;
         text-align: center;
         margin: 15px auto;
     }
 
-    .downloadmanual_iconsBlocks {
+    .manual_iconsBlocks {
         flex-wrap: wrap;
         justify-content: left;
     }
