--- a/practice/src/components/RidingModes/RidingModes.module.scss
+++ b/practice/src/components/RidingModes/RidingModes.module.scss
@@ -60,8 +60,13 @@
         justify-content: left;
     }
 
+    .RidingModes_textBlock {
+        padding: 5px 10px;
+        max-width: 800px;
+    }
+
     .RidingModes_title {
-        margin: 20px 0 5px 15px;
+        margin: 20px 0 5px 0;
         left: 0;
     }
 
@@ -70,8 +75,8 @@
         font-size: 15px;
         line-height: 18px;
         color: #afafaf;
-        margin-left: 15px;
-        left: 0;
+        margin: 0 auto;
+        position: static;
     }
 
     .RidingModes_img {
