--- a/practice/src/components/Ledlight/Ledlight.module.scss
+++ b/practice/src/components/Ledlight/Ledlight.module.scss
@@ -54,7 +54,28 @@
     }
 
     .Ledlight_text {
-        font-size: 10px;
+        font-size: 12px;
+        margin-bottom: 10px;
     }
 }
 
+@media (max-width: 500px) {
+    .Ledlight {
+        display: grid;
+    }
+
+    .LedLight_img {
+        grid-column: 2;
+        grid-row: 1;
+        width: 100%;
+        max-height: 375px;
+    }
+
+    .Ledlight_textBlock {
+        grid-column: 2;
+        grid-row: 2;
+        left: 0;
+        text-align: center;
+    }
+
+}
