--- a/practice/src/scss/PC.module.scss
+++ b/practice/src/scss/PC.module.scss
@@ -372,11 +372,11 @@ body {
 }
 
 .miles_textBlocks {
-    max-width: 1200px;
+    max-width: 1050px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 15px;
+    padding: 0 15px;
 }
 
 .miles_title_bold {
