--- a/practice/src/components/EasyCord/EasyCord.module.scss
+++ b/practice/src/components/EasyCord/EasyCord.module.scss
@@ -72,6 +72,7 @@
         grid-row: 1;
         margin: 0 10px 130px;
         text-align: center;
+        background-color: white;
     }
 
     .EasyCord_title {
