--- a/practice/src/components/Footer/Footer.module.scss
+++ b/practice/src/components/Footer/Footer.module.scss
@@ -4,8 +4,8 @@
     justify-content: space-around;
     align-items: center;
     background-color: #323941;
-    min-height: 48px;
     padding: 15px 0;
+    flex-shrink: 0;
 }
 
 .footer_textBlock {
